--- a/source/stylesheets/_30_intro.scss
+++ b/source/stylesheets/_30_intro.scss
@@ -27,7 +27,7 @@ section.intro {
       width: 119px;
       height: 34px;
       background-size: 119px 34px;
-      margin: 26px 16px 0 10px;
+      margin: 26px 22px 0 10px;
     }
   }
   a.read-more {
